k8s/sabnzbd/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: sabnzbd
  labels:
    app.kubernetes.io/name: sabnzbd
    app.kubernetes.io/instance: sabnzbd
    app.kubernetes.io/component: download-client
    app.kubernetes.io/part-of: media-stack
  annotations:
    glance/name: "SABnzbd"
    glance/icon: "di:sabnzbd"
    glance/url: "https://sabnzbd.home.coredev.uk"
    glance/description: "Usenet download client"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
      app.kubernetes.io/instance: sabnzbd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
        app.kubernetes.io/instance: sabnzbd
        app.kubernetes.io/component: download-client
        app.kubernetes.io/part-of: media-stack
    spec:
      containers:
        # Settings -> General -> Special -> host_whitelist (add: sabnzbd.home.coredev.uk)
        - name: sabnzbd
          image: lscr.io/linuxserver/sabnzbd:version-4.5.5@sha256:f0abed8e9450d5b71631a89b663fbfbfbb6909b254f94911c7e77162a3827854
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: data
              mountPath: /data
            - name: scripts
              mountPath: /scripts
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "8Gi"
              cpu: "4000m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: downloads
          persistentVolumeClaim:
            claimName: sabnzbd-downloads
        - name: data
          nfs:
            server: 192.168.20.40
            path: /var/nfs/shared/Homelab
        - name: tun-device
          hostPath:
            path: /dev/net/tun
        - name: scripts
          configMap:
            name: scripts
            defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: sabnzbd
  labels:
    tinyauth.apps.sabnzbd.oauth.groups: media_admin
spec:
  selector:
    app.kubernetes.io/name: sabnzbd
    app.kubernetes.io/instance: sabnzbd
  ports:
    - port: 8080
      targetPort: 8080
      name: sabnzbd-web
