k8s/sabnzbd/app/httproute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tinyauth-forwardauth
  namespace: sabnzbd
spec:
  forwardAuth:
    address: http://tinyauth-tinyauth.tinyauth.svc.cluster.local/api/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd-api
  namespace: sabnzbd
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - sabnzbd.home.coredev.uk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /sabnzbd/api
      backendRefs:
        - name: sabnzbd-main
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - sabnzbd.home.coredev.uk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: tinyauth-forwardauth
      backendRefs:
        - name: sabnzbd-main
          port: 8080
