k8s/sabnzbd/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd-ingressroute
  namespace: sabnzbd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzbd.home.coredev.uk`) && (PathPrefix(`/api`) || PathPrefix(`/sabnzbd/api`))
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
    - match: Host(`sabnzbd.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: authelia-forwardauth
          namespace: authelia
      services:
        - name: sabnzbd
          port: 8080
  tls:
    secretName: sabnzbd-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd-redirect
  namespace: sabnzbd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sabnzbd.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: sabnzbd
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: sabnzbd
spec:
  redirectScheme:
    scheme: https
    permanent: true
